still fixing image scaling bug. fixed some other spacing problems

--- a/stlye.css
+++ b/stlye.css
@@ -51,7 +51,7 @@ header ul {
 #sign-in {
     flex: 1;
     width: 100vw;
-    padding: 0 15vw;
+    padding: 5vh 15vw;
     margin: 0 auto;
     border: 2px solid rgb(87, 4, 241);
 }
@@ -64,10 +64,9 @@ header ul {
 }
 
 #intro .flex-item {
-    flex: auto;
-    max-width: 500px;
-    width: 100%;
-    height: 100%;
+    flex: 1 1 100px;
+    min-width: 0;
+    width: 100000px;
     object-fit: contain;
     color: white;
 }
@@ -117,6 +116,7 @@ div.flex-item {         /* does this always apply? */
     max-width: 180px;
     max-height: 180px;
     width: 100%;
+    height: width;
     border: 4px solid #3882f6;
     border-radius: 10px;
 }
